<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="3"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
        GridLayout 에 추가되는 view의 width, height 값이 wrap_content로 기본 지정되어 있어서
        match_parent 로 지정하는건 적용이 안되지만 숫자값으로 지정하는건 적용 된다.
        폰 사이즈 호환성 문제로 모든 사이즈를 0으로 하고 weight에 의해 사이즈 잡음
    -->
    <TextView
        android:text=""
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        />
    <TextView
        android:text="@string/analysis_recommend_column1"
        android:layout_width="0dp"
        android:layout_height="42sp"
        android:gravity="center_vertical"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="@dimen/ac_analysis_big_text_size"
        android:layout_columnWeight="1"
        />
    <TextView
        android:text="@string/analysis_recommend_column2"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="@dimen/ac_analysis_big_text_size"
        android:layout_height="42sp"
        android:gravity="center_vertical"
        android:layout_width="0dp"
        android:layout_columnWeight="1"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42sp"
        android:gravity="center"
        android:layout_columnWeight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analysis_recommend_row1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_text_size"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analysis_recommend_row_desc"
            android:textSize="@dimen/small_text_size"
            />
    </LinearLayout>
    <TextView
        android:text="￦1,655,000"
        android:textSize="@dimen/common_text_size"
        android:layout_width="0dp"
        android:layout_height="42sp"
        android:gravity="center_vertical"
        android:layout_columnWeight="1"/>
    <TextView
        android:text="￦200,000"
        android:textSize="@dimen/common_text_size"
        android:layout_width="0dp"
        android:layout_height="42sp"
        android:gravity="center_vertical"
        android:layout_columnWeight="1"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="42sp"
        android:gravity="center"
        android:layout_columnWeight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analysis_recommend_row2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/common_text_size"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analysis_recommend_row_desc"
            android:textSize="@dimen/small_text_size"
            />
    </LinearLayout>
    <TextView
        android:text="￦345,000"
        android:textSize="@dimen/common_text_size"
        android:layout_width="0dp"
        android:layout_height="42sp"
        android:gravity="center_vertical"
        android:layout_columnWeight="1"/>
    <TextView
        android:text="￦800,000"
        android:textSize="@dimen/common_text_size"
        android:layout_width="0dp"
        android:layout_height="42sp"
        android:gravity="center_vertical"
        android:layout_columnWeight="1"/>
</GridLayout>